force-app/main/default/objects/Stakeholder__c/fields/AccountantPartner__c.field-meta.xml
<CustomField>
    <fullName>AccountantPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EC Partenaire</label>
    <type>Checkbox</type>
</CustomField>