force-app/main/default/objects/Stakeholder__c/fields/AccountApp__c.field-meta.xml
<CustomField>
    <fullName>AccountApp__c</fullName>
    <description>Statut de l&#39;appli Account</description>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactif</fullName>
                <default>true</default>
                <label>Inactif</label>
            </value>
            <value>
                <fullName>Actif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>