force-app/main/default/objects/Stakeholder__c/fields/AccreInformations__c.field-meta.xml
<CustomField>
    <fullName>AccreInformations__c</fullName>
    <label>Informations ACCRE</label>
    <type>TextArea</type>
</CustomField>