force-app/main/default/objects/Stakeholder__c/fields/AccreRequest__c.field-meta.xml
<CustomField>
    <fullName>AccreRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande d&#39;ACCRE ?</label>
    <type>Checkbox</type>
</CustomField>