force-app/main/default/objects/Stakeholder__c/fields/ActualBeneficiary__c.field-meta.xml
<CustomField>
    <fullName>ActualBeneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>se coche automatiquement si + de 25% des part dans son entreprise</description>
    <label>Bénéficiaire effectif</label>
    <type>Checkbox</type>
</CustomField>