force-app/main/default/objects/Stakeholder__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>App</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiime</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Wallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>