force-app/main/default/objects/Stakeholder__c/fields/Associate__c.field-meta.xml
<CustomField>
    <fullName>Associate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associé</label>
    <type>Checkbox</type>
</CustomField>