force-app/main/default/objects/Stakeholder__c/fields/CapitalContribution__c.field-meta.xml
<CustomField>
    <fullName>CapitalContribution__c</fullName>
    <label>Apport en capital</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>