force-app/main/default/objects/Stakeholder__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipName>Parties_Prenantes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>