force-app/main/default/objects/Stakeholder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personne Physique</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Parties_PrenantesPP</relationshipName>
    <type>Lookup</type>
</CustomField>