force-app/main/default/objects/Stakeholder__c/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>Type de personne physique</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mandataire social</fullName>
                <default>true</default>
                <label>Mandataire social</label>
            </value>
            <value>
                <fullName>Bénéficiaire Effectif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>