force-app/main/default/objects/Stakeholder__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>Adresse Email</label>
    <type>Email</type>
</CustomField>