force-app/main/default/objects/Stakeholder__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>