force-app/main/default/objects/Stakeholder__c/fields/forwardEmailAlias__c.field-meta.xml
<CustomField>
    <fullName>forwardEmailAlias__c</fullName>
    <label>Alias mail pour Chronos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>