force-app/main/default/objects/Stakeholder__c/fields/IdBaseGi__c.field-meta.xml
<CustomField>
    <fullName>IdBaseGi__c</fullName>
    <description>Correspond à l&#39;identifiant dans formalitejuridiqueindividu_t</description>
    <externalId>true</externalId>
    <label>IdBaseGi</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>