force-app/main/default/objects/Stakeholder__c/fields/JobTitleBank__c.field-meta.xml
<CustomField>
    <fullName>JobTitleBank__c</fullName>
    <label>Fonction</label>
    <length>18</length>
    <type>Text</type>
</CustomField>