force-app/main/default/objects/Stakeholder__c/fields/KYCConcerned__c.field-meta.xml
<CustomField>
    <fullName>KYCConcerned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concerné par le KYC</label>
    <type>Checkbox</type>
</CustomField>