force-app/main/default/objects/Stakeholder__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personne Morale</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Parties_PrenantesPM</relationshipName>
    <type>Lookup</type>
</CustomField>