force-app/main/default/objects/Stakeholder__c/fields/MainStakeholder__c.field-meta.xml
<CustomField>
    <fullName>MainStakeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet d&#39;identifier le Stakeholder propriétaire du Wallet</description>
    <label>Stakeholder Principal</label>
    <type>Checkbox</type>
</CustomField>