force-app/main/default/objects/Stakeholder__c/fields/NbShares__c.field-meta.xml
<CustomField>
    <fullName>NbShares__c</fullName>
    <label>Nombre de parts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>