force-app/main/default/objects/Stakeholder__c/fields/Officer__c.field-meta.xml
<CustomField>
    <fullName>Officer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandataire</label>
    <type>Checkbox</type>
</CustomField>