force-app/main/default/objects/Stakeholder__c/fields/OfficerType__c.field-meta.xml
<CustomField>
    <fullName>OfficerType__c</fullName>
    <label>Type de mandataire</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Officer__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OfficerTypeList</valueSetName>
    </valueSet>
</CustomField>