force-app/main/default/objects/Stakeholder__c/fields/PoleEmploiInscriptionDate__c.field-meta.xml
<CustomField>
    <fullName>PoleEmploiInscriptionDate__c</fullName>
    <label>Date d&#39;inscription à Pôle Emploi</label>
    <type>Date</type>
</CustomField>