force-app/main/default/objects/Stakeholder__c/fields/PrincipalContact__c.field-meta.xml
<CustomField>
    <fullName>PrincipalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact principal de l&#39;entreprise</label>
    <type>Checkbox</type>
</CustomField>