force-app/main/default/objects/Stakeholder__c/fields/SharesPercentage__c.field-meta.xml
<CustomField>
    <fullName>SharesPercentage__c</fullName>
    <description>Champs système</description>
    <formula>IF(
  OR(
    CapitalContribution__c == 0, 
    Company__r.ShareCapital__c == 0
  ), 
  0, 
  (CapitalContribution__c  /   Company__r.ShareCapital__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PourcentageCapitalsocial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>