force-app/main/default/objects/Stakeholder__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilisateur</label>
    <type>Checkbox</type>
</CustomField>