force-app/main/default/objects/Stakeholder__c/fields/WalletApp__c.field-meta.xml
<CustomField>
    <fullName>WalletApp__c</fullName>
    <description>Statut de l&#39;appli Wallet</description>
    <label>Wallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
                <default>true</default>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>Incomplet</fullName>
            </value>
            <value>
                <fullName>Incomplet traité</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Refusé</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Fermé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>