force-app/main/default/objects/Stakeholder__c/recordTypes/AccountantPartner.recordType-meta.xml
<RecordType>
    <fullName>AccountantPartner</fullName>
    <active>true</active>
    <label>EC Partenaire</label>
</RecordType>