force-app/main/default/objects/Stakeholder__c/recordTypes/Personne_Morale.recordType-meta.xml
<RecordType>
    <fullName>Personne_Morale</fullName>
    <active>true</active>
    <label>Personne Morale</label>
</RecordType>