force-app/main/default/objects/Stakeholder__c/validationRules/EntrepriseStakeholder_bloque.validationRule-meta.xml
<ValidationRule>
    <fullName>EntrepriseStakeholder_bloque</fullName>
    <active>true</active>
    <description>Cette règle permet de rendre le champ entreprise du stakeholder en lecture seule</description>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false, 
ISCHANGED(Company__c)
)</errorConditionFormula>
    <errorMessage>L&#39;entreprise liée à ce contact ne peut être changée. Merci de créer un nouveau contact</errorMessage>
</ValidationRule>