force-app/main/default/objects/Stakeholder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>JobTitleBank__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>